disable horizontal scroll, fix landing page layout on hero section

--- a/tailwind.css
+++ b/tailwind.css
@@ -35,6 +35,8 @@
 }
 
 body {
+  max-width: 100%; 
+  overflow-x: hidden;
 	font-family: var(--font-default);
 }
 
